--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=user-service-api
+server.port=8083
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom_user?createDatabaseifNotExists=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
